syntax = "proto3";

package log.v1;

option go_package = "github.com/2222-42/proglog/api/log_v1";

message Record {
  bytes value = 1;
  uint64 offset = 2;
}

service Log {
  rpc Produce(ProduceRequest) returns (ProduceResponse) {}
  rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
  rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {} // client --(request)--> server; receive a sequence of messages
  rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {} // two-way streaming RPC send a sequence of messages that both of client and server can read and write.
}


message ProduceRequest {
  Record record = 1;// ログに書き込むレコード
}

message ProduceResponse {
  uint64 offset = 1;// レコードのオフセット
}

message ConsumeRequest {
  uint64 offset = 1;
}

message ConsumeResponse {
  Record record = 1;
}